package Aggregation;

public class instructor
{
    private String firstName;
    private String lastName;
    private String officeNumber;

    public instructor(){};

    public instructor(String firstName, String lastName, String officeNumber)
    {
        this.firstName = firstName;
        this.lastName = lastName;
        this.officeNumber = officeNumber;
    }

    public String toString()
    {
        return ("Instructor: " + firstName + " " + lastName + ", " + officeNumber);
    }

    public String getFirstName()
    {
        return firstName;
    }

    public void setFirstName(String firstName)
    {
        this.firstName = firstName;
    }

    public String getLastName()
    {
        return lastName;
    }

    public void setLastName(String LastName)
    {
        this.lastName = LastName;
    }

    public String getOfficeNumber()
    {
        return officeNumber;
    }

    public void setOfficeNumber(String officeNumber)
    {
        this.officeNumber = officeNumber;
    }
}
